# AtlasGraph

./: .gitignore  LICENSE  README.md  README_EN.md  index.html  package-lock.json  package.json  ts_errors.txt  vite.config.ts
.github/: release_notes.md
.github/workflows/: release.yml
scripts/: tauri-runner.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs
src-tauri/src/database/: error.rs  kuzu.rs  lbug.rs  mod.rs  neo4j.rs
src/components/: ConnectView.css  ConnectView.tsx  ContextMenu.tsx  CreationModal.tsx  DetailPanel.tsx  GraphCanvas.tsx  GraphToolbar.tsx  Header.css  Header.tsx  HistoryView.css  HistoryView.tsx  QueryEditor.css  QueryEditor.tsx  ResultPanel.css  ResultPanel.tsx  Sidebar.css  Sidebar.tsx  ThemeView.css  ThemeView.tsx  icons.tsx
src/components/engines/: KuzuForm.tsx  LbugForm.tsx  Neo4jForm.tsx  types.ts
src/hooks/: useDatabaseActions.ts
src/store/: dbStore.ts  graphStore.ts  uiStore.ts
src/types/: index.ts
src/utils/: dbUtils.ts
