[package]
name = "atlas-graph"
version = "0.1.0"
description = "一个知识图谱可视化工具"
authors = ["wxj"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
neo4rs = { version = "0.8", optional = true }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
lbug = { version = "0.15.3", optional = true }
kuzu = { version = "0.11.3", optional = true }

[features]
default = ["neo4j", "lbug"]
neo4j = ["dep:neo4rs"]
lbug = ["dep:lbug"]
kuzu = ["dep:kuzu"]

[profile.release]
panic = "abort"      # 发生 panic 时直接退出，不保留栈展开代码，可减小体积
codegen-units = 1    # 使用单个线程进行代码生成，最大化优化效果（会增加编译时间）
lto = true           # 开启链接时优化 (Link Time Optimization)，大幅减少体积
opt-level = "z"      # 针对体积进行全量优化 (如果觉得性能下降，可以改为 "s")
strip = true         # 剥离所有调试信息和符号表（非常有效！）

[profile.dev.package.lbug]
opt-level = 3
debug = false

[profile.dev.package.kuzu]
opt-level = 3
debug = false
